--- a/overnight.html
+++ b/overnight.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overnight</title>
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/overnight.js"></script>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
 <script>
@@ -12,6 +14,12 @@
 </script>
 <main>
     <h1>Overnight</h1>
+    <form id="OvernightForm">
+
+        <input type="date" id="when" name="when" required>
+        <input type="submit" value="Save">
+    </form>
+    <div id="output">?</div>
 </main>
 <footer>
     Copyright 2024
